feat: crawl4ai lib and enhance environment variable config

--- a/env.sample
+++ b/env.sample
@@ -5,6 +5,8 @@ BACKEND_URL=http://localhost:3000
 BACKEND_API_PREFIX=/api/v1
 REQUEST_TIMEOUT=10.0
 
+DEFAULT_AUTH_TOKEN=
+
 # ML Models
 YOLO_MODEL_PATH=./weights/yolov8-vn-food-classification.pt
 YOLO_GENERAL_CLS_MODEL_PATH=./weights/yolo11s-cls.pt
@@ -13,3 +15,8 @@ YOLO_GENERAL_CLS_MODEL_PATH=./weights/yolo11s-cls.pt
 # These are hardcoded in config.py but could be moved to environment variables
 # OLLAMA_BASE_URL=http://localhost:11434
 # OLLAMA_MODEL=llama3.1:8b 
+
+# Cloud Model
+CLOUD_MODEL=
+GROQ_API_KEY=
+OPENAI_API_KEY=
